fixed light-dark mode switch

--- a/styles/pcpartpicker/catppuccin.user.less
+++ b/styles/pcpartpicker/catppuccin.user.less
@@ -289,8 +289,8 @@
         background-color: transparent !important;
       }
       .modeSwitch .pp_toggle_theme {
-        background-color: @base;
-        box-shadow: inset 0 0 0 1px @surface0;
+        background-color: @base !important;
+        box-shadow: inset 0 0 0 1px @surface0 !important;
         .modeSwitch__toggle {
           box-shadow: none;
           background-color: @surface0;
@@ -1044,7 +1044,7 @@
     // Register / Login
     #register .card, #login .card {
       background-color: @crust !important;
-      .checkbox:not(:checked) + label:before {
+      .checkbox:not(:checked) + label::before {
         background-color: @mantle;
       }
       .note--belowButton {
